fix(card): cards containing `<a>` inside a heading will no longer propagate to wrapping cards (#4360)

--- a/packages/css/src/card.css
+++ b/packages/css/src/card.css
@@ -68,7 +68,8 @@
 
   /* Add states when Card is a anchor, button, or when containing a anchor in heading */
   &:where(a, button, [role='button']),
-  &:where(:has(:is(h1, h2, h3, h4, h5, h6) a)) {
+  /* Match cards containing heading with a link, but exclude outer cards  */
+    &:where(:has(:is(h1, h2, h3, h4, h5, h6) a)):where(:not(:has(&))) {
     cursor: pointer;
     text-decoration: none;
 
